--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 install:
   - sudo luarocks install busted
-  - sudo luarocks make
+  - sudo luarocks make luasystem-scm-0.rockspec
 
 script: busted spec
 
