--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,52 @@
-**/.*.swp
-**/.*.swo
+# Compiled Lua sources
+luac.out
+
+# LuaCov files
+*.report.out
+*.stats.out
+
+# luarocks build files
+*.rock
+*.zip
+*.tar.gz
+
+# Object files
 *.o
+*.os
+*.ko
 *.obj
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+*.def
+*.exp
+
+# Shared objects (inc. Windows DLLs)
 *.dll
 *.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# VIM files
+**/.*.swp
+**/.*.swo
+
+# VS Code files
+.vscode/
+
