--- a/.github/workflows/unix_build.yml
+++ b/.github/workflows/unix_build.yml
@@ -18,8 +18,6 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
-
     strategy:
       fail-fast: false
       matrix:
@@ -29,18 +27,27 @@ jobs:
         - "5.2"
         - "5.3"
         - "5.4"
-        - "luajit-2.1.0-beta3"
+        - "luajit"
         - "luajit-openresty"
+        include:
+          - os: "macos-latest"
+            luaVersion: "5.4"
+          - os: "windows-latest"
+            luaVersion: "luajit"
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@master
 
-      - uses: leafo/gh-actions-lua@v10
+      - uses: leafo/gh-actions-lua@master
         with:
           luaVersion: ${{ matrix.luaVersion }}
 
-      - uses: leafo/gh-actions-luarocks@v4
+      - uses: hishamhm/gh-actions-luarocks@master
+        with:
+          luarocksVersion: "3.9.2"
 
       - name: dependencies
         run: |
