try system as well to see if it s the module itself
lfs doesn't load, now also try system.core to see if the problem is generic, or per module?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
           luarocks config
           luarocks show luafilesystem
           dir C:\Users\runneradmin\AppData\Roaming\luarocks\lib\lua\5.4\lfs.dll
+          lua -e "print(require'system.core')"
           lua -e "print(require'lfs')"
           luarocks make
 
