chore(ci): use gh-actions-lua fork
including various pending PRs from leafo/gh-actions-lua

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
           dir ".\.dependencies\Dependencies.exe"
           .\.dependencies\Dependencies.exe -help
 
-      - uses: leafo/gh-actions-lua@master
+      - uses: hishamhm/gh-actions-lua@master
         with:
           luaVersion: ${{ matrix.luaVersion }}
 
