chore(test): mark tests as manual and skip them in ci
The marked tests rely on a tty, and the check fails in CI.
Those tests can only be ran manually to get a reliable result.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,4 +106,4 @@ jobs:
 
       - name: test
         run: |
-          busted --Xoutput "--color"
+          busted --exclude-tags=manual --Xoutput "--color"
