Lint MSGH Action workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+---
 name: "Build"
 
 concurrency:
@@ -13,7 +14,7 @@ on:
   pull_request: {}
   push:
     branches:
-    - master
+      - master
 
 jobs:
   test:
@@ -22,19 +23,19 @@ jobs:
       matrix:
         os: ['ubuntu-20.04', 'macos-13']
         luaVersion:
-        - "5.1"
-        - "5.2"
-        - "5.3"
-        - "5.4"
-        - "luajit"
-        - "luajit-openresty"
+          - "5.1"
+          - "5.2"
+          - "5.3"
+          - "5.4"
+          - "luajit"
+          - "luajit-openresty"
         include:
           - os: "macos-latest"
             luaVersion: "5.4"
           # On Windows builds:
-          # 'hishamhm/gh-actions-lua' will build the PuC Rio Lua versions using MSVC, and
-          # the LuaJIT version using MinGW/gcc. By running against both below, we test
-          # both toolchains.
+          # 'hishamhm/gh-actions-lua' will build the PuC Rio Lua versions using
+          # MSVC, and the LuaJIT version using MinGW/gcc. By running against
+          # both below, we test both toolchains.
           - os: "windows-latest"
             toolchain: "msvc"
             luaVersion: "5.1"
@@ -64,28 +65,31 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
 
       # - name: install Dependencies analyzer
-      #   # action step used for troubleshooting if Windows dll's build incorrectly
-      #   run: |
-      #     $version = "1.11.1"
-      #     echo "Installing Dependencies version: $version"
-      #     $url = 'https://github.com/lucasg/Dependencies/releases/download/v' + $version + '/Dependencies_x64_Release.zip'
-      #     $dest = Join-Path -Path $PWD -ChildPath ".dependencies"
+      #   # action step used for troubleshooting if Windows dll's build
+      #   # incorrectly
+      #   run: "
+      #     $version = \"1.11.1\"\n
+      #     echo \"Installing Dependencies version: $version\"\n
+      #     $url = 'https://github.com/lucasg/Dependencies/releases/download/v'
+      #         + $version + '/Dependencies_x64_Release.zip'\n
+      #     $dest = Join-Path -Path $PWD -ChildPath \".dependencies\"\n
 
-      #     # Download and extract Dependencies
-      #     New-Item -ItemType Directory -Path "$dest"
-      #     Invoke-WebRequest -Uri $url -OutFile "$dest\dependencies.zip"
-      #     Expand-Archive -Path "$dest\dependencies.zip" -DestinationPath "$dest"
-      #     Remove-Item -Path "$dest\dependencies.zip"
-      #     # dir "$dest"
+      #     # Download and extract Dependencies\n
+      #     New-Item -ItemType Directory -Path \"$dest\"\n
+      #     Invoke-WebRequest -Uri $url -OutFile \"$dest\\dependencies.zip\"\n
+      #     Expand-Archive -Path \"$dest\\dependencies.zip\" -DestinationPath
+      #         \"$dest\"\n
+      #     Remove-Item -Path \"$dest\\dependencies.zip\"\n
+      #     # dir \"$dest\"\n
 
-      #     # Add Dependencies to PATH
-      #     $env:PATH += ";$dest"
-      #     echo $env:PATH
+      #     # Add Dependencies to PATH\n
+      #     $env:PATH += \";$dest\"\n
+      #     echo $env:PATH\n
 
-      #     # Verify Dependencies Installation
-      #     dir "$dest\*.exe"
-      #     dir ".\.dependencies\Dependencies.exe"
-      #     .\.dependencies\Dependencies.exe -help
+      #     # Verify Dependencies Installation\n
+      #     dir \"$dest\\*.exe\"\n
+      #     dir \".\\.dependencies\Dependencies.exe\"\n
+      #     .\\.dependencies\\Dependencies.exe -help\n
 
       - uses: hishamhm/gh-actions-lua@master
         with:
