--- a/.github/workflows/luacheck.yml
+++ b/.github/workflows/luacheck.yml
@@ -26,4 +26,4 @@ jobs:
         run: pip install yamllint
       - name: Run yamllint
         run: |
-          yamllint -c .github/workflows/.yamllint.yaml .
+          yamllint .
