--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
           - "5.2"
           - "5.3"
           - "5.4"
+          - "5.5"
           - "luajit"
           - "luajit-openresty"
         include:
@@ -48,6 +49,9 @@ jobs:
           - os: "windows-latest"
             toolchain: "msvc"
             luaVersion: "5.4"
+          - os: "windows-latest"
+            toolchain: "msvc"
+            luaVersion: "5.5"
           - os: "windows-latest"
             toolchain: "mingw"  # unused, other than for display in the UI
             luaVersion: "luajit"
@@ -97,7 +101,7 @@ jobs:
 
       - uses: hishamhm/gh-actions-luarocks@master
         with:
-          luaRocksVersion: "3.12.0"
+          luaRocksVersion: "3.13.0"
 
       - name: test dependencies
         run: |
