--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-24.04', 'macos-13']
+        os: ['ubuntu-24.04', 'macos-latest']
         luaVersion:
           - "5.1"
           - "5.2"
@@ -31,8 +31,8 @@ jobs:
           - "luajit"
           - "luajit-openresty"
         include:
-          - os: "macos-latest"
-            luaVersion: "5.4"
+          - os: "macos-15-intel"
+            luaVersion: "5.5"
           # On Windows builds:
           # 'hishamhm/gh-actions-lua' will build the PuC Rio Lua versions using
           # MSVC, and the LuaJIT version using MinGW/gcc. By running against
